
IF ( NOT POSTGRESQL_USERNAME )
  SET( POSTGRESQL_USERNAME $ENV{POSTGRESQL_USERNAME} )
  IF ( NOT POSTGRESQL_USERNAME )
    SET( POSTGRESQL_USERNAME "testdb" )
  ENDIF( )
ENDIF( )

IF ( NOT POSTGRESQL_DATABASE )
  SET( POSTGRESQL_DATABASE $ENV{POSTGRESQL_DATABASE} )
  IF ( NOT POSTGRESQL_DATABASE )
    SET( POSTGRESQL_DATABASE ${POSTGRESQL_USERNAME} )
  ENDIF( )
ENDIF( )

IF ( NOT POSTGRESQL_PASSWORD )
  SET( POSTGRESQL_PASSWORD $ENV{POSTGRESQL_PASSWORD} )
  IF ( NOT POSTGRESQL_PASSWORD )
    SET( POSTGRESQL_PASSWORD "123456" )
  ENDIF( )
ENDIF( )

IF ( NOT POSTGRESQL_HOSTNAME )
  SET( POSTGRESQL_HOSTNAME $ENV{POSTGRESQL_HOSTNAME} )
  IF ( NOT POSTGRESQL_HOSTNAME )
    SET( POSTGRESQL_HOSTNAME "postgres" )
  ENDIF( )
ENDIF( )

ADD_DEFINITIONS(
  -DPOSTGRESQL_USERNAME="${POSTGRESQL_USERNAME}"
  -DPOSTGRESQL_DATABASE="${POSTGRESQL_DATABASE}"
  -DPOSTGRESQL_PASSWORD="${POSTGRESQL_PASSWORD}"
  -DPOSTGRESQL_HOSTNAME="${POSTGRESQL_HOSTNAME}"
)

ADD_EXECUTABLE( token_test token_test.cc )
TARGET_LINK_LIBRARIES(
  token_test tokengov
  ${OPENSSL_CRYPTO_LIBRARY}
  ${CONAN_LIBS_CPPURI}
  ${CMAKE_DL_LIBS}
)
ADD_TEST( NAME token COMMAND token_test )
